bpo-30353: Fix pass by value for structs on 64-bit Cygwin/MinGW (GH-1559) (cherry picked from commit 9ba3aa4d02a110d1a1ea464a8aff3be7dd9c63c3)

Co-authored-by: Erik Bray <erik.m.bray@gmail.com>